replace some references relative to Toulouse area by variables defined in key.php replace some references relative to Toulouse area by variables in translation files replace other references relatives to Toulouse area by Velobs

--- a/admin.html
+++ b/admin.html
@@ -2,7 +2,7 @@
 <!DOCTYPE >
 <html>
 	<head>
-		<title>VelObs 2 Pieds 2 Roues [Admin]</title>
+		<title>VelObs [Admin]</title>
 		<link rel="shortcut icon" type="image/png" href="resources/favicon/favicon.ico" />
 	</head>
 	<body>
