fix du API key Required de thunderforest pour OpenCycleMap

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 			<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading language...';</script>
 			<script type="text/javascript" src="lib/js/framework/ext-3.4.0/src/locale/ext-lang-fr.js"></script>
 			<script type="text/javascript" src="lib/js/translation_fr.js"></script>
+            <script type="text/javascript" src="lib/js/key.js"></script>
 			
 			<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading extensions...';</script>
 			<script type="text/javascript" src="lib/js/framework/ux/GeoNamesSearchCombo.js"></script>
