--- a/admin.html
+++ b/admin.html
@@ -27,6 +27,7 @@
 			
 			<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading language...';</script>
 			<script type="text/javascript" src="lib/js/framework/ext-3.4.0/src/locale/ext-lang-fr.js"></script>
+			<script type="text/javascript" src="lib/js/key.js"></script>
 			
 			<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading application...'</script>
 			<script type="text/javascript" src="lib/js/admin/login.js"></script>
