--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 	
 			<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading language...';</script>
 			<script type="text/javascript" src="lib/js/framework/ext-3.4.0/src/locale/ext-lang-fr.js"></script>
-			<script type="text/javascript" src="lib/js/translation_fr.js"></script>
-            <script type="text/javascript" src="lib/js/key.js"></script>
+			<script type="text/javascript" src="lib/js/translation_fr.js?v1.3"></script>
+            <script type="text/javascript" src="lib/js/key.js?v1.3"></script>
 			
 			<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading extensions...';</script>
 			<script type="text/javascript" src="lib/js/framework/ux/GeoNamesSearchCombo.js"></script>
@@ -44,9 +44,9 @@
 			
 			<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading application...';</script>
 			<script type="text/javascript" src="lib/js/public/credits.js"></script>
-			<script type="text/javascript" src="lib/js/public/proposition.js"></script>
-			<script type="text/javascript" src="lib/js/public/map.js"></script>
-			<script type="text/javascript" src="lib/js/public/main.js"></script>
+			<script type="text/javascript" src="lib/js/public/proposition.js?v1.3"></script>
+			<script type="text/javascript" src="lib/js/public/map.js?v1.3"></script>
+			<script type="text/javascript" src="lib/js/public/main.js?v1.3"></script>
 	 
 			<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Initialization...';</script> 
 		</div>
