--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body onunload="setCookie()">
 		<div id="loading"> 
 			<div class="loading-indicator">
-                <img alt="VelObs" src="resources/images/velobs.jpg" width="99" height="64" style="margin-right:8px;float:left;vertical-align:top;"/>VelObs - <a href="https://www.2p2r.org/" target="_blank">2P2R</a><br /><span id="loading-msg">Loading styles and images ...</span>
+                <img alt="VelObs" src="resources/images/velocite.png" height="64" style="margin-right:8px;float:left;vertical-align:top;"/>Cyclo-Fiches - <a href="https://www.velo-cite.org/" target="_blank">Vélo-Cité</a><br /><span id="loading-msg">Loading styles and images ...</span>
 			</div>
 			<link rel="stylesheet" type="text/css" href="resources/css/icon.css" />
 			<link rel="stylesheet" type="text/css" href="lib/js/framework/ext-3.4.0/resources/css/ext-all.css" />
