Modifs sur le header (logo, classes CSS,...)

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 			<link rel="stylesheet" type="text/css" href="resources/css/public.css" />
 			<link rel="stylesheet" type="text/css" href="resources/css/iconmarker.css" />
 			<link rel="stylesheet" type="text/css" href="resources/css/fileuploadfield.css" />
+
+			<!-- Début particularités Vélo-Cité -->
+			<link rel="stylesheet" type="text/css" href="resources/css/velocite/header.css" />
+			<!-- Fin particularités Vélo-Cité -->
 	
 			<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Loading ExtJS...';</script>
 			<script type="text/javascript" src="lib/js/framework/ext-3.4.0/adapter/ext/ext-base.js"></script>
