--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 		<title>VelObs</title>
-		<link rel="shortcut icon" type="image/png" href="resources/favicon/favicon.ico" />
+		<link rel="shortcut icon" type="image/png" href="resources/favicon/favicon.png" />
 	</head>
 	<body onunload="setCookie()">
 		<div id="loading"> 
