--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<title>VelObs [Admin]</title>
-		<link rel="shortcut icon" type="image/png" href="resources/favicon/favicon.ico" />
+		<link rel="shortcut icon" type="image/png" href="resources/favicon/favicon.png" />
 	</head>
 	<body>
 		<div id="loading">
