Amélioration du style de la page de loading (meilleur centrage)

--- a/index.html
+++ b/index.html
@@ -4,11 +4,25 @@
 		<title>VelObs</title>
 		<link rel="shortcut icon" type="image/png" href="resources/favicon/favicon.jpg" />
 	</head>
+
 	<body onunload="setCookie()">
-		<div id="loading"> 
+		<div id="loading"
+			 class="loading"> 
 			<div class="loading-indicator">
-                <img alt="VelObs" src="resources/images/velocite.png" height="64" style="margin-right:8px;float:left;vertical-align:top;"/>Cyclo-Fiches - <a href="https://www.velo-cite.org/" target="_blank">Vélo-Cité</a><br /><span id="loading-msg">Loading styles and images ...</span>
+				<img src="resources/images/velocite.png"
+					 class="loading__logo"
+					 title="Logo Vélo-Cité"
+					 alt="Logo Vélo-Cité"
+					 height="64"
+					 style="margin-right:8px;float:left;vertical-align:top;"/>
+				
+				<span class="loading__message">
+					<p>Cyclo-Fiches - <a href="https://www.velo-cite.org/" target="_blank">Vélo-Cité</a></p>
+
+					<p id="loading-msg">Loading styles and images ...</p>
+				</span>
 			</div>
+
 			<link rel="stylesheet" type="text/css" href="resources/css/icon.css" />
 			<link rel="stylesheet" type="text/css" href="lib/js/framework/ext-3.4.0/resources/css/ext-all.css" />
 			<link rel="stylesheet" type="text/css" href="lib/js/framework/ext-3.4.0/resources/css/xtheme-gray.css" />
@@ -20,6 +34,7 @@
 			<link rel="stylesheet" type="text/css" href="resources/css/fileuploadfield.css" />
 
 			<!-- Début particularités Vélo-Cité -->
+			<link rel="stylesheet" type="text/css" href="resources/css/velocite/loading.css" />
 			<link rel="stylesheet" type="text/css" href="resources/css/velocite/header.css" />
 			<!-- Fin particularités Vélo-Cité -->
 	
