--- a/index.html
+++ b/index.html
@@ -69,6 +69,23 @@
 			<script type="text/javascript" src="lib/js/public/main.js?v1.3"></script>
 	 
 			<script type="text/javascript">document.getElementById('loading-msg').innerHTML = 'Initialization...';</script> 
+
+			<script type="text/javascript">
+			 window.addEventListener("load", function() {
+				 document.getElementsByClassName("x-tree-node-cb").addEventListener("load", function() {
+					console.log(".x-tree-node-cb chargé !");
+				 });
+
+				 document.getElementsByClassName("x-tree-node-cb")[0].addEventListener("click", function() {
+					console.log(".x-tree-node-cb clické !");
+				 });
+
+				 console.log("tentative de click sur .x-tree-node-cb...");
+				 document.getElementsByClassName("x-tree-node-cb")[0].click();
+				 console.log("click sur .x-tree-node-cb !");
+
+				}); 
+			</script>
 		</div>
 	</body>
 </html>
