--- a/admin.html
+++ b/admin.html
@@ -1,7 +1,8 @@
 
-<!DOCTYPE >
+<!DOCTYPE html>
 <html>
 	<head>
+	   <meta charset="utf-8">
 		<title>VelObs [Admin]</title>
 		<link rel="shortcut icon" type="image/png" href="resources/favicon/favicon.ico" />
 	</head>
